Add 2022 university ranking for math

--- a/top_universities.ipynb
+++ b/top_universities.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "65141b66",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "fa98a0ea",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "9c1aafd4",
    "metadata": {},
    "outputs": [],
@@ -97,9 +97,9 @@
     "        return [Uni(normalize(name), format(rank)) for name, rank in islice(reader, limit)]\n",
     "\n",
     "# Load universities\n",
-    "ranking_the = load_ranking(\"ranking_scraper/the_cs_2022.csv\", \",\", 100)\n",
-    "ranking_qs = load_ranking(\"ranking_scraper/qs_cs_2021.csv\", \",\", 100)\n",
-    "ranking_arwu = load_ranking(\"ranking_scraper/arwu_cs_2021.csv\", \",\", 100)"
+    "ranking_the = load_ranking(\"ranking_scraper/the_math_2022.csv\", \",\", 100)\n",
+    "ranking_qs = load_ranking(\"ranking_scraper/qs_math_2021.csv\", \",\", 100)\n",
+    "ranking_arwu = load_ranking(\"ranking_scraper/arwu_math_2021.csv\", \",\", 100)"
    ]
   },
   {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "5a841061",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "c12c8d35",
    "metadata": {},
    "outputs": [
@@ -144,27 +144,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "University of Oxford\t1\n",
-      "Stanford University\t2\n",
-      "Massachusetts Institute of Technology (MIT)\t3\n",
-      "University of Cambridge\t4\n",
-      "ETH Zurich\t4\n",
-      "Carnegie Mellon University\t6\n",
-      "Harvard University\t7\n",
-      "University of California, Berkeley\t8\n",
-      "National University of Singapore (NUS)\t8\n",
-      "Princeton University\t10\n",
+      "University of California, Berkeley\t1\n",
+      "California Institute of Technology (Caltech)\t2\n",
+      "Princeton University\t2\n",
+      "Massachusetts Institute of Technology (MIT)\t4\n",
+      "Stanford University\t4\n",
+      "Harvard University\t6\n",
+      "University of Cambridge\t7\n",
+      "University of Oxford\t8\n",
+      "ETH Zurich\t9\n",
+      "Yale University\t10\n",
       "...\n",
-      "Tokyo Institute of Technology (Tokyo Tech)\t88\n",
-      "University of Southampton\t91\n",
-      "University of Birmingham\t92\n",
-      "University of Luxembourg\t93\n",
-      "Monash University\t93\n",
-      "University of Zurich\t93\n",
-      "Vrije Universiteit Amsterdam\t96\n",
-      "Technion Israel Institute of Technology\t97\n",
-      "TU Wien\t97\n",
-      "Queen Mary University of London\t99\n",
+      "University of Zurich\t90\n",
+      "Sapienza University of Rome\t92\n",
+      "Free University of Berlin\t93\n",
+      "King's College London\t94\n",
+      "University of Bern\t95\n",
+      "Lomonosov Moscow State University\t95\n",
+      "Université Grenoble Alpes\t97\n",
+      "University of Copenhagen\t98\n",
+      "Durham University\t99\n",
+      "KU Leuven\t100\n",
       "-----------------------------\n",
       "Length: 100\n"
      ]
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "id": "1ed902e3",
    "metadata": {},
    "outputs": [
@@ -186,25 +186,25 @@
      "text": [
       "Massachusetts Institute of Technology (MIT)\t1\n",
       "Stanford University\t2\n",
-      "Carnegie Mellon University\t3\n",
-      "National University of Singapore (NUS)\t4\n",
-      "University of California, Berkeley\t5\n",
-      "University of Oxford\t6\n",
-      "Harvard University\t7\n",
-      "University of Cambridge\t8\n",
-      "Swiss Federal Institute of Technology Lausanne (EPFL)\t9\n",
-      "ETH Zurich\t10\n",
+      "Harvard University\t3\n",
+      "University of Cambridge\t4\n",
+      "University of Oxford\t5\n",
+      "University of California, Berkeley\t6\n",
+      "Princeton University\t7\n",
+      "ETH Zurich\t8\n",
+      "National University of Singapore (NUS)\t9\n",
+      "University of California, Los Angeles (UCLA)\t10\n",
       "...\n",
-      "University of Wisconsin–Madison\t89\n",
-      "Boston University\t92\n",
-      "Karlsruhe Institute of Technology (KIT)\t92\n",
-      "Universidad Nacional Autónoma de México (UNAM)\t94\n",
-      "University of Massachusetts (UMass)\t95\n",
-      "Aalto University\t96\n",
-      "University of Warwick\t96\n",
-      "Université catholique de Louvain (UCL)\t96\n",
-      "Aarhus University\t99\n",
-      "University of Adelaide\t99\n",
+      "Pennsylvania State University\t90\n",
+      "Moscow Institute of Physics and Technology (MIPT)\t92\n",
+      "RWTH Aachen University\t92\n",
+      "University of Queensland\t92\n",
+      "HSE University\t95\n",
+      "University of Bonn\t96\n",
+      "Universidade de São Paulo\t96\n",
+      "Ohio State University\t98\n",
+      "University of Bath\t99\n",
+      "University of Copenhagen\t100\n",
       "-----------------------------\n",
       "Length: 100\n"
      ]
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "id": "e96a5910",
    "metadata": {},
    "outputs": [
@@ -224,27 +224,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Massachusetts Institute of Technology (MIT)\t1\n",
-      "Stanford University\t2\n",
-      "University of California, Berkeley\t3\n",
-      "Carnegie Mellon University\t4\n",
-      "ETH Zurich\t5\n",
-      "Tsinghua University\t6\n",
-      "Harvard University\t7\n",
-      "Nanyang Technological University (NTU)\t8\n",
-      "University of Oxford\t9\n",
-      "University of California, Los Angeles (UCLA)\t10\n",
+      "Paris-Saclay University\t1\n",
+      "Princeton University\t2\n",
+      "Sorbonne University\t3\n",
+      "University of Cambridge\t4\n",
+      "University of Oxford\t5\n",
+      "Stanford University\t6\n",
+      "Massachusetts Institute of Technology (MIT)\t7\n",
+      "New York University (NYU)\t8\n",
+      "ETH Zurich\t9\n",
+      "University of Texas at Austin\t10\n",
       "...\n",
-      "Sichuan University\t88\n",
-      "Swinburne University of Technology\t88\n",
-      "Technical University of Denmark\t88\n",
-      "University of Hong Kong\t88\n",
-      "University of Melbourne\t88\n",
-      "Tongji University\t88\n",
-      "Université Grenoble Alpes\t88\n",
-      "University of California, Merced\t88\n",
-      "University of Macau\t88\n",
-      "University of Pennsylvania\t88\n",
+      "University of Florida\t88\n",
+      "University of Granada\t88\n",
+      "University of Pavia\t88\n",
+      "University of Rennes 1\t88\n",
+      "University of Roma - Tor Vergata\t88\n",
+      "University of Virginia\t88\n",
+      "University of Warsaw\t88\n",
+      "University Paris Est Creteil\t88\n",
+      "Wuhan University\t88\n",
+      "Autonomous University of Madrid\t125.5\n",
       "-----------------------------\n",
       "Length: 100\n"
      ]
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "61f256b7",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
     "\n",
     "unis_all = unis_qs | unis_the | unis_arwu\n",
     "\n",
-    "with open(\"data/cs-2022/universities_sorted.tsv\", \"w\") as file:\n",
+    "with open(\"data/math-2022/universities_sorted.tsv\", \"w\") as file:\n",
     "    for uni in sorted(unis_all):\n",
     "        file.write(f\"{uni}\\n\")\n",
     "    file.write(f\"Length: {len(unis_all)}\")"
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "id": "151dd7e9",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "id": "94156d63",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "0de48819",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "id": "5e55de6e",
    "metadata": {},
    "outputs": [
@@ -358,66 +358,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\tMassachusetts Institute of Technology (MIT)\t1.67\n",
-      "2\tStanford University\t2.00\n",
-      "3\tCarnegie Mellon University\t4.33\n",
-      "4\tUniversity of California, Berkeley\t5.33\n",
-      "5\tUniversity of Oxford\t5.33\n",
-      "6\tETH Zurich\t6.33\n",
-      "7\tHarvard University\t7.00\n",
-      "8\tNational University of Singapore (NUS)\t9.00\n",
-      "9\tTsinghua University\t10.33\n",
-      "10\tNanyang Technological University (NTU)\t11.67\n",
-      "11\tPrinceton University\t12.67\n",
-      "12\tUniversity of California, Los Angeles (UCLA)\t12.67\n",
-      "13\tUniversity of Toronto\t16.00\n",
-      "14\tCornell University\t18.00\n",
-      "15\tPeking University\t19.67\n",
-      "16\tUniversity of Cambridge\t20.67\n",
-      "17\tImperial College London\t22.00\n",
-      "18\tUniversity of Washington\t22.33\n",
-      "19\tShanghai Jiao Tong University\t25.00\n",
-      "20\tUniversity College London (UCL)\t26.00\n",
-      "21\tUniversity of Edinburgh\t26.00\n",
-      "22\tColumbia University\t28.00\n",
-      "23\tNew York University (NYU)\t28.33\n",
-      "24\tGeorgia Institute of Technology (Georgia Tech)\t29.67\n",
-      "25\tSwiss Federal Institute of Technology Lausanne (EPFL)\t30.33\n",
-      "26\tUniversity of Texas at Austin\t30.67\n",
-      "27\tChinese University of Hong Kong (CUHK)\t31.33\n",
-      "28\tUniversity of Michigan-Ann Arbor\t35.00\n",
-      "29\tHong Kong University of Science and Technology\t35.33\n",
-      "30\tZhejiang University\t35.33\n",
-      "31\tTechnical University of Munich\t37.33\n",
-      "32\tUniversity of Southern California\t37.33\n",
-      "33\tUniversity of Illinois at Urbana-Champaign\t38.67\n",
-      "34\tUniversity of Waterloo\t44.33\n",
-      "35\tCalifornia Institute of Technology (Caltech)\t45.33\n",
-      "36\tUniversity of British Columbia\t45.67\n",
-      "37\tUniversity of Montreal\t48.00\n",
-      "38\tUniversity of California, San Diego (UCSD)\t49.67\n",
-      "39\tUniversity of Pennsylvania\t50.67\n",
-      "40\tUniversity of Technology Sydney\t52.00\n",
-      "41\tKorea Advanced Institute of Science and Technology (KAIST)\t52.33\n",
-      "42\tUniversity of Science and Technology of China\t53.00\n",
-      "43\tUniversity of Sydney\t54.00\n",
-      "44\tYale University\t54.33\n",
-      "45\tUniversity of Maryland, College Park\t54.33\n",
-      "46\tUniversity of Tokyo\t55.33\n",
-      "47\tParis Sciences et Lettres (PSL University)\t55.67\n",
-      "48\tAustralian National University\t56.67\n",
-      "49\tUniversity of Hong Kong\t57.33\n",
-      "50\tUniversity of Wisconsin–Madison\t58.00\n",
-      "51\tUniversity of North Carolina at Chapel Hill\t59.00\n",
-      "52\tUniversity of Melbourne\t59.33\n",
-      "53\tJohns Hopkins University\t59.33\n",
-      "54\tSeoul National University\t61.00\n",
-      "55\tUniversity of Chicago\t61.33\n",
-      "56\tUniversity of New South Wales (UNSW Sydney)\t62.33\n",
-      "57\tCity University of Hong Kong\t64.33\n",
-      "58\tMcGill University\t68.00\n",
-      "59\tHong Kong Polytechnic University\t69.00\n",
-      "60\tKU Leuven\t69.67\n"
+      "1\tPrinceton University\t3.67\n",
+      "2\tMassachusetts Institute of Technology (MIT)\t4.00\n",
+      "3\tStanford University\t4.00\n",
+      "4\tUniversity of Cambridge\t5.00\n",
+      "5\tUniversity of Oxford\t6.00\n",
+      "6\tUniversity of California, Berkeley\t6.33\n",
+      "7\tHarvard University\t8.33\n",
+      "8\tETH Zurich\t8.67\n",
+      "9\tUniversity of California, Los Angeles (UCLA)\t11.67\n",
+      "10\tImperial College London\t13.67\n"
      ]
     }
    ],
@@ -425,7 +375,7 @@
     "def save_ranking(ranking: list[Uni], limit: int = None) -> None:\n",
     "    \"\"\"Save ranking to file and preview it.\"\"\"\n",
     "    ranking_sorted = [uni for uni in sorted(ranking_all, key=lambda uni: uni.rank)]\n",
-    "    with open(\"data/cs-2022/ranking_global_cs_2022.tsv\", \"w\") as file:\n",
+    "    with open(\"data/math-2022/ranking_global_math_2022.tsv\", \"w\") as file:\n",
     "        for i, uni in enumerate(ranking_sorted, start=1):\n",
     "            row = f\"{i}\\t{uni.name}\\t{uni.rank:.2f}\"\n",
     "            file.write(f\"{row}\\n\")\n",
@@ -433,7 +383,7 @@
     "            if i == limit:\n",
     "                break\n",
     "\n",
-    "save_ranking(ranking_all, 60)"
+    "save_ranking(ranking_all, 10)"
    ]
   },
   {
@@ -446,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "id": "087066ad",
    "metadata": {},
    "outputs": [
@@ -454,8 +404,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unis without id: ['University of Southern California']\n",
-      "$top50cs =  [39, 1, 40, 3, 1092, 288, 38, 72, 168, 170, 6, 692, 8, 225, 159, 978, 1043, 15, 238, 384, 14, 33, 483, 12, 16, 86, 48, 2, 31, 2027, 74, 17, 2444, 11, 4, 1458, 49, 5, 813, 399, 930, 977, 99, 22, 69, 888, 292, 405, 56, 70]\n"
+      "Unis without id: ['University of Bonn', 'Humboldt University of Berlin']\n",
+      "$top50math =  [6, 39, 1, 978, 1092, 3, 38, 288, 692, 1043, 888, 119, 33, 11, 8, 159, 2, 86, 483, 355, 72, 16, 99, 12, 168, 56, 4, 17, 14, 69, 322, 15, 794, 384, 266, 225, 49, 62, 187, 74, 29, 22, 1248, 170, 5, 40, 976, 930, 268, 292]\n"
      ]
     }
    ],
@@ -473,8 +423,8 @@
     "    print(\"Unis without id:\", unis_without_id)\n",
     "    return ranking_sorted_ids\n",
     "\n",
-    "top_50_cs = get_ids(ranking_all, 60)[:50]\n",
-    "print(\"$top50cs = \", top_50_cs)"
+    "top_50_math = get_ids(ranking_all, 60)[:50]\n",
+    "print(\"$top50math = \", top_50_math)"
    ]
   }
  ],
