Make it easy to create new rankings

--- a/top_universities.ipynb
+++ b/top_universities.ipynb
@@ -18,18 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "65141b66",
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
+    "import os\n",
+    "\n",
     "from collections import defaultdict\n",
     "from dataclasses import dataclass\n",
     "from itertools import islice\n",
     "from statistics import mean\n",
     "\n",
-    "from normalize import alt2main, main2id"
+    "from normalize import alt2main, main2id\n",
+    "from ranking_scraper.ranking_scraper.settings import ranking as r"
    ]
   },
   {
@@ -42,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "fa98a0ea",
    "metadata": {},
    "outputs": [],
@@ -64,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "9c1aafd4",
    "metadata": {},
    "outputs": [],
@@ -97,9 +100,10 @@
     "        return [Uni(normalize(name), format(rank)) for name, rank in islice(reader, limit)]\n",
     "\n",
     "# Load universities\n",
-    "ranking_the = load_ranking(\"ranking_scraper/the_math_2022.csv\", \",\", 100)\n",
-    "ranking_qs = load_ranking(\"ranking_scraper/qs_math_2021.csv\", \",\", 100)\n",
-    "ranking_arwu = load_ranking(\"ranking_scraper/arwu_math_2021.csv\", \",\", 100)"
+    "base = \"ranking_scraper/ranking_scraper\"\n",
+    "ranking_the = load_ranking(f\"{base}/data/input/{r['subject']}_{r['year']}/the.csv\", \",\", 100)\n",
+    "ranking_qs = load_ranking(f\"{base}/data/input/{r['subject']}_{r['year']}/qs.csv\", \",\", 100)\n",
+    "ranking_arwu = load_ranking(f\"{base}/data/input/{r['subject']}_{r['year']}/arwu.csv\", \",\", 100)"
    ]
   },
   {
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "5a841061",
    "metadata": {},
    "outputs": [],
@@ -136,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "c12c8d35",
    "metadata": {},
    "outputs": [
@@ -176,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "1ed902e3",
    "metadata": {},
    "outputs": [
@@ -216,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "e96a5910",
    "metadata": {},
    "outputs": [
@@ -274,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "61f256b7",
    "metadata": {},
    "outputs": [],
@@ -285,7 +289,7 @@
     "\n",
     "unis_all = unis_qs | unis_the | unis_arwu\n",
     "\n",
-    "with open(\"data/math-2022/universities_sorted.tsv\", \"w\") as file:\n",
+    "with open(f\"{base}/data/output/universities_sorted.tsv\", \"w\") as file:\n",
     "    for uni in sorted(unis_all):\n",
     "        file.write(f\"{uni}\\n\")\n",
     "    file.write(f\"Length: {len(unis_all)}\")"
@@ -301,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "151dd7e9",
    "metadata": {},
    "outputs": [],
@@ -318,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "94156d63",
    "metadata": {},
    "outputs": [],
@@ -331,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "0de48819",
    "metadata": {},
    "outputs": [],
@@ -350,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "5e55de6e",
    "metadata": {},
    "outputs": [
@@ -367,7 +371,57 @@
       "7\tHarvard University\t8.33\n",
       "8\tETH Zurich\t8.67\n",
       "9\tUniversity of California, Los Angeles (UCLA)\t11.67\n",
-      "10\tImperial College London\t13.67\n"
+      "10\tImperial College London\t13.67\n",
+      "11\tParis Sciences et Lettres (PSL University)\t15.33\n",
+      "12\tUniversity of Chicago\t16.00\n",
+      "13\tColumbia University\t18.00\n",
+      "14\tCalifornia Institute of Technology (Caltech)\t18.33\n",
+      "15\tUniversity of Toronto\t22.33\n",
+      "16\tPeking University\t24.33\n",
+      "17\tUniversity of Michigan-Ann Arbor\t24.33\n",
+      "18\tUniversity of Texas at Austin\t24.33\n",
+      "19\tNew York University (NYU)\t24.67\n",
+      "20\tSorbonne University\t26.33\n",
+      "21\tNational University of Singapore (NUS)\t29.33\n",
+      "22\tSwiss Federal Institute of Technology Lausanne (EPFL)\t30.00\n",
+      "23\tYale University\t31.33\n",
+      "24\tGeorgia Institute of Technology (Georgia Tech)\t32.00\n",
+      "25\tTsinghua University\t33.00\n",
+      "26\tUniversity of Wisconsin–Madison\t34.33\n",
+      "27\tUniversity of British Columbia\t37.00\n",
+      "28\tUniversity of Illinois at Urbana-Champaign\t38.67\n",
+      "29\tUniversity of Edinburgh\t39.00\n",
+      "30\tUniversity of Tokyo\t39.33\n",
+      "31\tFudan University\t40.33\n",
+      "32\tUniversity of Washington\t40.33\n",
+      "33\tParis-Saclay University\t42.67\n",
+      "34\tUniversity College London (UCL)\t43.33\n",
+      "35\tKyoto University\t45.00\n",
+      "36\tCornell University\t46.00\n",
+      "37\tUniversity of California, San Diego (UCSD)\t46.00\n",
+      "38\tNorthwestern University\t46.33\n",
+      "39\tUniversity of Warwick\t46.67\n",
+      "40\tTechnical University of Munich\t47.33\n",
+      "41\tBrown University\t48.00\n",
+      "42\tUniversity of Maryland, College Park\t52.67\n",
+      "43\tUniversity of Paris\t55.33\n",
+      "44\tNanyang Technological University (NTU)\t55.67\n",
+      "45\tUniversity of Pennsylvania\t55.67\n",
+      "46\tUniversity of Bonn\t57.00\n",
+      "47\tCarnegie Mellon University\t60.33\n",
+      "48\tKTH Royal Institute of Technology\t60.33\n",
+      "49\tUniversity of Science and Technology of China\t60.33\n",
+      "50\tMcGill University\t61.33\n",
+      "51\tAustralian National University\t64.67\n",
+      "52\tHong Kong University of Science and Technology\t65.00\n",
+      "53\tUniversity of Hong Kong\t69.00\n",
+      "54\tDuke University\t69.00\n",
+      "55\tJohns Hopkins University\t69.00\n",
+      "56\tUniversity of Melbourne\t69.67\n",
+      "57\tUniversity of Manchester\t69.67\n",
+      "58\tHumboldt University of Berlin\t69.67\n",
+      "59\tShanghai Jiao Tong University\t71.00\n",
+      "60\tChinese University of Hong Kong (CUHK)\t72.00\n"
      ]
     }
    ],
@@ -375,7 +429,9 @@
     "def save_ranking(ranking: list[Uni], limit: int = None) -> None:\n",
     "    \"\"\"Save ranking to file and preview it.\"\"\"\n",
     "    ranking_sorted = [uni for uni in sorted(ranking_all, key=lambda uni: uni.rank)]\n",
-    "    with open(\"data/math-2022/ranking_global_math_2022.tsv\", \"w\") as file:\n",
+    "    filepath = f\"{base}/data/output/{r['subject']}_{r['year']}_combined.tsv\"\n",
+    "    os.makedirs(os.path.dirname(filepath), exist_ok=True)\n",
+    "    with open(filepath, \"w\") as file:\n",
     "        for i, uni in enumerate(ranking_sorted, start=1):\n",
     "            row = f\"{i}\\t{uni.name}\\t{uni.rank:.2f}\"\n",
     "            file.write(f\"{row}\\n\")\n",
@@ -383,7 +439,7 @@
     "            if i == limit:\n",
     "                break\n",
     "\n",
-    "save_ranking(ranking_all, 10)"
+    "save_ranking(ranking_all, 60)"
    ]
   },
   {
@@ -396,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "087066ad",
    "metadata": {},
    "outputs": [
