--- a/top_universities.ipynb
+++ b/top_universities.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "id": "65141b66",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "id": "fa98a0ea",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "id": "9c1aafd4",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "id": "5a841061",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "id": "c12c8d35",
    "metadata": {},
    "outputs": [
@@ -148,27 +148,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "University of California, Berkeley\t1\n",
-      "California Institute of Technology (Caltech)\t2\n",
-      "Princeton University\t2\n",
-      "Massachusetts Institute of Technology (MIT)\t4\n",
-      "Stanford University\t4\n",
-      "Harvard University\t6\n",
-      "University of Cambridge\t7\n",
-      "University of Oxford\t8\n",
-      "ETH Zurich\t9\n",
-      "Yale University\t10\n",
+      "Massachusetts Institute of Technology (MIT)\t1\n",
+      "Stanford University\t1\n",
+      "University of Cambridge\t3\n",
+      "University of Oxford\t4\n",
+      "Harvard University\t5\n",
+      "University of California, Berkeley\t6\n",
+      "University of Chicago\t7\n",
+      "Yale University\t8\n",
+      "London School of Economics and Political Science (LSE)\t9\n",
+      "Duke University\t10\n",
       "...\n",
-      "University of Zurich\t90\n",
-      "Sapienza University of Rome\t92\n",
-      "Free University of Berlin\t93\n",
-      "King's College London\t94\n",
-      "University of Bern\t95\n",
-      "Lomonosov Moscow State University\t95\n",
-      "Université Grenoble Alpes\t97\n",
-      "University of Copenhagen\t98\n",
-      "Durham University\t99\n",
-      "KU Leuven\t100\n",
+      "University of Twente\t92\n",
+      "Vrije Universiteit Amsterdam\t92\n",
+      "City University of Hong Kong\t94\n",
+      "Sant’Anna School of Advanced Studies – Pisa\t95\n",
+      "University of Illinois at Urbana-Champaign\t96\n",
+      "Georgia Institute of Technology (Georgia Tech)\t97\n",
+      "University of Maryland, College Park\t98\n",
+      "University of Nottingham\t99\n",
+      "University of Glasgow\t100\n",
+      "University of Alberta\t113\n",
       "-----------------------------\n",
       "Length: 100\n"
      ]
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "id": "1ed902e3",
    "metadata": {},
    "outputs": [
@@ -188,27 +188,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Massachusetts Institute of Technology (MIT)\t1\n",
-      "Stanford University\t2\n",
-      "Harvard University\t3\n",
-      "University of Cambridge\t4\n",
-      "University of Oxford\t5\n",
-      "University of California, Berkeley\t6\n",
-      "Princeton University\t7\n",
-      "ETH Zurich\t8\n",
-      "National University of Singapore (NUS)\t9\n",
-      "University of California, Los Angeles (UCLA)\t10\n",
+      "Harvard University\t1\n",
+      "INSEAD\t2\n",
+      "London Business School\t3\n",
+      "Massachusetts Institute of Technology (MIT)\t4\n",
+      "Stanford University\t5\n",
+      "University of Pennsylvania\t6\n",
+      "Bocconi University\t7\n",
+      "University of Cambridge\t8\n",
+      "HEC Paris School of Management\t9\n",
+      "University of Oxford\t10\n",
       "...\n",
-      "Pennsylvania State University\t90\n",
-      "Moscow Institute of Physics and Technology (MIPT)\t92\n",
-      "RWTH Aachen University\t92\n",
-      "University of Queensland\t92\n",
-      "HSE University\t95\n",
-      "University of Bonn\t96\n",
-      "Universidade de São Paulo\t96\n",
-      "Ohio State University\t98\n",
-      "University of Bath\t99\n",
-      "University of Copenhagen\t100\n",
+      "University of Southern California\t90\n",
+      "National Taiwan University (NTU)\t92\n",
+      "Paris Sciences et Lettres (PSL University)\t92\n",
+      "University of Auckland\t94\n",
+      "University College London (UCL)\t94\n",
+      "University of Strathclyde\t96\n",
+      "Zhejiang University\t96\n",
+      "Universidad de Chile\t98\n",
+      "Aston University\t99\n",
+      "Technical University of Munich\t99\n",
       "-----------------------------\n",
       "Length: 100\n"
      ]
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "id": "e96a5910",
    "metadata": {},
    "outputs": [
@@ -228,27 +228,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Paris-Saclay University\t1\n",
-      "Princeton University\t2\n",
-      "Sorbonne University\t3\n",
-      "University of Cambridge\t4\n",
-      "University of Oxford\t5\n",
-      "Stanford University\t6\n",
-      "Massachusetts Institute of Technology (MIT)\t7\n",
-      "New York University (NYU)\t8\n",
-      "ETH Zurich\t9\n",
-      "University of Texas at Austin\t10\n",
+      "Erasmus University Rotterdam\t1\n",
+      "Texas A&M University\t2\n",
+      "University of Pennsylvania\t3\n",
+      "Harvard University\t4\n",
+      "University of Michigan-Ann Arbor\t5\n",
+      "Duke University\t6\n",
+      "Georgia State University\t7\n",
+      "Indiana University\t8\n",
+      "INSEAD\t9\n",
+      "University of North Carolina at Chapel Hill\t10\n",
       "...\n",
-      "University of Florida\t88\n",
-      "University of Granada\t88\n",
-      "University of Pavia\t88\n",
-      "University of Rennes 1\t88\n",
-      "University of Roma - Tor Vergata\t88\n",
+      "University of Texas at San Antonio\t88\n",
+      "Universitat Ramon Llull\t88\n",
+      "University of California, Berkeley\t88\n",
+      "University of California, Los Angeles (UCLA)\t88\n",
+      "University of Houston\t88\n",
+      "University of Kentucky\t88\n",
+      "University of Tennessee - Knoxville\t88\n",
       "University of Virginia\t88\n",
-      "University of Warsaw\t88\n",
-      "University Paris Est Creteil\t88\n",
-      "Wuhan University\t88\n",
-      "Autonomous University of Madrid\t125.5\n",
+      "Vrije Universiteit Amsterdam\t88\n",
+      "Washington University in St. Louis\t88\n",
       "-----------------------------\n",
       "Length: 100\n"
      ]
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "id": "61f256b7",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "id": "151dd7e9",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "id": "94156d63",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "id": "0de48819",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "id": "5e55de6e",
    "metadata": {},
    "outputs": [
@@ -362,66 +362,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\tPrinceton University\t3.67\n",
-      "2\tMassachusetts Institute of Technology (MIT)\t4.00\n",
-      "3\tStanford University\t4.00\n",
-      "4\tUniversity of Cambridge\t5.00\n",
-      "5\tUniversity of Oxford\t6.00\n",
-      "6\tUniversity of California, Berkeley\t6.33\n",
-      "7\tHarvard University\t8.33\n",
-      "8\tETH Zurich\t8.67\n",
-      "9\tUniversity of California, Los Angeles (UCLA)\t11.67\n",
-      "10\tImperial College London\t13.67\n",
-      "11\tParis Sciences et Lettres (PSL University)\t15.33\n",
-      "12\tUniversity of Chicago\t16.00\n",
-      "13\tColumbia University\t18.00\n",
-      "14\tCalifornia Institute of Technology (Caltech)\t18.33\n",
-      "15\tUniversity of Toronto\t22.33\n",
-      "16\tPeking University\t24.33\n",
-      "17\tUniversity of Michigan-Ann Arbor\t24.33\n",
-      "18\tUniversity of Texas at Austin\t24.33\n",
-      "19\tNew York University (NYU)\t24.67\n",
-      "20\tSorbonne University\t26.33\n",
-      "21\tNational University of Singapore (NUS)\t29.33\n",
-      "22\tSwiss Federal Institute of Technology Lausanne (EPFL)\t30.00\n",
-      "23\tYale University\t31.33\n",
-      "24\tGeorgia Institute of Technology (Georgia Tech)\t32.00\n",
-      "25\tTsinghua University\t33.00\n",
-      "26\tUniversity of Wisconsin–Madison\t34.33\n",
-      "27\tUniversity of British Columbia\t37.00\n",
-      "28\tUniversity of Illinois at Urbana-Champaign\t38.67\n",
-      "29\tUniversity of Edinburgh\t39.00\n",
-      "30\tUniversity of Tokyo\t39.33\n",
-      "31\tFudan University\t40.33\n",
-      "32\tUniversity of Washington\t40.33\n",
-      "33\tParis-Saclay University\t42.67\n",
-      "34\tUniversity College London (UCL)\t43.33\n",
-      "35\tKyoto University\t45.00\n",
-      "36\tCornell University\t46.00\n",
-      "37\tUniversity of California, San Diego (UCSD)\t46.00\n",
-      "38\tNorthwestern University\t46.33\n",
-      "39\tUniversity of Warwick\t46.67\n",
-      "40\tTechnical University of Munich\t47.33\n",
-      "41\tBrown University\t48.00\n",
-      "42\tUniversity of Maryland, College Park\t52.67\n",
-      "43\tUniversity of Paris\t55.33\n",
-      "44\tNanyang Technological University (NTU)\t55.67\n",
-      "45\tUniversity of Pennsylvania\t55.67\n",
-      "46\tUniversity of Bonn\t57.00\n",
-      "47\tCarnegie Mellon University\t60.33\n",
-      "48\tKTH Royal Institute of Technology\t60.33\n",
-      "49\tUniversity of Science and Technology of China\t60.33\n",
-      "50\tMcGill University\t61.33\n",
-      "51\tAustralian National University\t64.67\n",
-      "52\tHong Kong University of Science and Technology\t65.00\n",
-      "53\tUniversity of Hong Kong\t69.00\n",
-      "54\tDuke University\t69.00\n",
-      "55\tJohns Hopkins University\t69.00\n",
-      "56\tUniversity of Melbourne\t69.67\n",
-      "57\tUniversity of Manchester\t69.67\n",
-      "58\tHumboldt University of Berlin\t69.67\n",
-      "59\tShanghai Jiao Tong University\t71.00\n",
-      "60\tChinese University of Hong Kong (CUHK)\t72.00\n"
+      "1\tHarvard University\t3.33\n",
+      "2\tUniversity of Pennsylvania\t7.00\n",
+      "3\tStanford University\t13.67\n",
+      "4\tErasmus University Rotterdam\t14.33\n",
+      "5\tColumbia University\t14.67\n",
+      "6\tUniversity of Michigan-Ann Arbor\t16.67\n",
+      "7\tNorthwestern University\t18.00\n",
+      "8\tDuke University\t21.67\n",
+      "9\tNew York University (NYU)\t22.00\n",
+      "10\tUniversity of Cambridge\t24.67\n",
+      "11\tUniversity of Oxford\t25.67\n",
+      "12\tNational University of Singapore (NUS)\t30.00\n",
+      "13\tUniversity of Chicago\t31.00\n",
+      "14\tHong Kong University of Science and Technology\t33.67\n",
+      "15\tMassachusetts Institute of Technology (MIT)\t35.33\n",
+      "16\tUniversity of Toronto\t35.33\n",
+      "17\tUniversity of California, Berkeley\t35.67\n",
+      "18\tCornell University\t36.33\n",
+      "19\tUniversity of British Columbia\t36.67\n",
+      "20\tUniversity of Warwick\t37.00\n",
+      "21\tINSEAD\t37.33\n",
+      "22\tTilburg University\t39.00\n",
+      "23\tLondon School of Economics and Political Science (LSE)\t40.33\n",
+      "24\tHong Kong Polytechnic University\t42.00\n",
+      "25\tYale University\t42.33\n",
+      "26\tUniversity of Texas at Austin\t42.33\n",
+      "27\tCopenhagen Business School\t44.00\n",
+      "28\tNanyang Technological University (NTU)\t44.00\n",
+      "29\tUniversity of Melbourne\t44.00\n",
+      "30\tMichigan State University\t44.67\n",
+      "31\tBocconi University\t45.33\n",
+      "32\tUniversity of California, Los Angeles (UCLA)\t45.33\n",
+      "33\tUniversity of St. Gallen\t45.67\n",
+      "34\tUniversity of Hong Kong\t47.00\n",
+      "35\tTsinghua University\t47.67\n",
+      "36\tPeking University\t48.33\n",
+      "37\tUniversity of Manchester\t50.33\n",
+      "38\tUniversity of Southern California\t51.00\n",
+      "39\tAalto University\t52.00\n",
+      "40\tUniversity of Minnesota\t52.33\n",
+      "41\tArizona State University\t52.67\n",
+      "42\tMonash University\t53.67\n",
+      "43\tUniversity of Washington\t53.67\n",
+      "44\tLondon Business School\t55.67\n",
+      "45\tUniversity of Leeds\t55.67\n",
+      "46\tPennsylvania State University\t56.00\n",
+      "47\tChinese University of Hong Kong (CUHK)\t57.67\n",
+      "48\tIndiana University\t59.33\n",
+      "49\tUniversity of North Carolina at Chapel Hill\t60.00\n",
+      "50\tBoston University\t60.33\n",
+      "51\tTexas A&M University\t62.00\n",
+      "52\tCity, University of London\t63.67\n",
+      "53\tShanghai Jiao Tong University\t64.00\n",
+      "54\tUniversity of New South Wales (UNSW Sydney)\t65.33\n",
+      "55\tUniversity of Mannheim\t65.67\n",
+      "56\tUniversity of Wisconsin–Madison\t65.67\n",
+      "57\tUniversity of Tokyo\t66.33\n",
+      "58\tUniversity of Queensland\t67.00\n",
+      "59\tSingapore Management University\t67.33\n",
+      "60\tSeoul National University\t69.00\n"
      ]
     }
    ],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 54,
    "id": "087066ad",
    "metadata": {},
    "outputs": [
@@ -460,8 +460,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unis without id: ['University of Bonn', 'Humboldt University of Berlin']\n",
-      "$top60math =  [6, 39, 1, 978, 1092, 3, 38, 288, 692, 1043, 888, 119, 33, 11, 8, 159, 2, 86, 483, 355, 72, 16, 99, 12, 168, 56, 4, 17, 14, 69, 322, 15, 794, 384, 266, 225, 49, 62, 187, 74, 29, 22, 1248, 170, 5, 40, 976, 930, 268, 292, 31, 405, 7, 9, 24, 227, 238, 48]\n"
+      "Unis without id: ['Tilburg University', 'London School of Economics and Political Science (LSE)', 'University of St. Gallen', 'University of Southern California', 'City, University of London', 'Singapore Management University']\n",
+      "50\n",
+      "$top_unis_business_2022 =  [38, 5, 1, 849, 33, 2, 62, 7, 483, 978, 1092, 72, 119, 31, 39, 8, 3, 225, 4, 187, 1468, 663, 99, 86, 237, 170, 24, 109, 229, 692, 405, 168, 159, 227, 2108, 50, 164, 350, 15, 717, 179, 55, 48, 100, 70, 348, 1555, 238, 233, 2239]\n"
      ]
     }
    ],
@@ -479,8 +480,9 @@
     "    print(\"Unis without id:\", unis_without_id)\n",
     "    return ranking_sorted_ids\n",
     "\n",
-    "top_60_math = get_ids(ranking_all, 60)\n",
-    "print(\"$top60math = \", top_60_math)"
+    "top_unis_ids = get_ids(ranking_all, 60)[:50]\n",
+    "print(len(top_unis_ids))\n",
+    "print(f\"$top_unis_{r['subject']}_{r['year']} = \", top_unis_ids)"
    ]
   }
  ],
