Finalize CS ranking 2023

--- a/top_unis.ipynb
+++ b/top_unis.ipynb
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "e53a9455-39c9-4d12-9782-ff60dac86424",
    "metadata": {},
    "outputs": [
@@ -622,198 +622,7 @@
       "9\tNanyang Technological University (NTU)\t11.00\n",
       "\n",
       "10\tPrinceton University\t11.33\n",
-      "\n",
-      "11\tTsinghua University\t11.33\n",
-      "\n",
-      "12\tUniversity of Toronto\t16.33\n",
-      "\n",
-      "13\tCornell University\t18.33\n",
-      "\n",
-      "14\tColumbia University\t18.33\n",
-      "\n",
-      "15\tUniversity of California, Los Angeles (UCLA)\t19.33\n",
-      "\n",
-      "16\tPeking University\t19.33\n",
-      "\n",
-      "17\tUniversity of Cambridge\t21.33\n",
-      "\n",
-      "18\tImperial College London\t21.33\n",
-      "\n",
-      "19\tUniversity of Washington\t22.00\n",
-      "\n",
-      "20\tShanghai Jiao Tong University\t23.33\n",
-      "\n",
-      "21\tGeorgia Institute of Technology (Georgia Tech)\t23.67\n",
-      "\n",
-      "22\tUniversity of Edinburgh\t25.00\n",
-      "\n",
-      "23\tNew York University (NYU)\t26.33\n",
-      "\n",
-      "24\tSwiss Federal Institute of Technology Lausanne (EPFL)\t27.67\n",
-      "\n",
-      "25\tUniversity College London (UCL)\t29.67\n",
-      "\n",
-      "26\tTechnical University of Munich\t30.33\n",
-      "\n",
-      "27\tUniversity of Illinois at Urbana-Champaign\t31.33\n",
-      "\n",
-      "28\tZhejiang University\t32.33\n",
-      "\n",
-      "29\tUniversity of Montreal\t38.33\n",
-      "\n",
-      "30\tUniversity of Waterloo\t38.67\n",
-      "\n",
-      "31\tThe Hong Kong University of Science and Technology\t38.67\n",
-      "\n",
-      "32\tUniversity of British Columbia\t39.67\n",
-      "\n",
-      "33\tUniversity of California, San Diego (UCSD)\t42.67\n",
-      "\n",
-      "34\tUniversity of Michigan-Ann Arbor\t43.67\n",
-      "\n",
-      "35\tUniversity of Southern California\t44.33\n",
-      "\n",
-      "36\tKorea Advanced Institute of Science and Technology (KAIST)\t49.67\n",
-      "\n",
-      "37\tUniversity of Sydney\t49.67\n",
-      "\n",
-      "38\tJohns Hopkins University\t50.33\n",
-      "\n",
-      "39\tUniversity of Pennsylvania\t51.33\n",
-      "\n",
-      "40\tUniversity of Maryland\t51.67\n",
-      "\n",
-      "41\tCalifornia Institute of Technology (Caltech)\t52.00\n",
-      "\n",
-      "42\tKing Abdulaziz University (KAU)\t52.67\n",
-      "\n",
-      "43\tParis-Saclay University\t53.00\n",
-      "\n",
-      "44\tUniversity of Technology Sydney\t54.00\n",
-      "\n",
-      "45\tUniversity of Melbourne\t56.00\n",
-      "\n",
-      "46\tUniversity of Texas at Austin\t56.33\n",
-      "\n",
-      "47\tYale University\t57.00\n",
-      "\n",
-      "48\tInstitut Polytechnique de Paris\t59.33\n",
-      "\n",
-      "49\tUniversity of New South Wales (UNSW Sydney)\t59.33\n",
-      "\n",
-      "50\tSeoul National University\t60.33\n",
-      "\n",
-      "51\tParis Sciences et Lettres (PSL University)\t61.67\n",
-      "\n",
-      "52\tUniversity of Science and Technology of China\t61.67\n",
-      "\n",
-      "53\tMcGill University\t62.67\n",
-      "\n",
-      "54\tChinese University of Hong Kong (CUHK)\t63.33\n",
-      "\n",
-      "55\tUniversity of Chicago\t63.67\n",
-      "\n",
-      "56\tUniversity of Tokyo\t64.00\n",
-      "\n",
-      "57\tKU Leuven\t64.00\n",
-      "\n",
-      "58\tUniversity of Hong Kong\t64.00\n",
-      "\n",
-      "59\tUniversity of Amsterdam\t65.67\n",
-      "\n",
-      "60\tDelft University of Technology\t67.67\n",
-      "\n",
-      "61\tMonash University\t69.00\n",
-      "\n",
-      "62\tAalto University\t69.33\n",
-      "\n",
-      "63\tNanjing University\t70.00\n",
-      "\n",
-      "64\tUniversity of Electronic Science and Technology of China\t71.33\n",
-      "\n",
-      "65\tHuazhong University of Science and Technology\t72.33\n",
-      "\n",
-      "66\tCity University of Hong Kong\t72.33\n",
-      "\n",
-      "67\tSorbonne University\t73.33\n",
-      "\n",
-      "68\tPolitecnico di Milano\t74.00\n",
-      "\n",
-      "69\tThe Chinese University of Hong Kong\t74.00\n",
-      "\n",
-      "70\tAustralian National University\t74.33\n",
-      "\n",
-      "71\tBeihang University\t75.00\n",
-      "\n",
-      "72\tHarbin Institute of Technology\t75.33\n",
-      "\n",
-      "73\tXidian University\t76.00\n",
-      "\n",
-      "74\tTechnical University of Berlin\t76.67\n",
-      "\n",
-      "75\tUniversity of Oslo\t77.33\n",
-      "\n",
-      "76\tPurdue University\t78.33\n",
-      "\n",
-      "77\tThe University of Texas at Austin\t79.00\n",
-      "\n",
-      "78\tDuke University\t79.33\n",
-      "\n",
-      "79\tUniversity of North Carolina at Chapel Hill\t79.33\n",
-      "\n",
-      "80\tKTH Royal Institute of Technology\t80.00\n",
-      "\n",
-      "81\tRWTH Aachen University\t80.33\n",
-      "\n",
-      "82\tSun Yat-sen University\t80.33\n",
-      "\n",
-      "83\tFudan University\t80.67\n",
-      "\n",
-      "84\tSoutheast University\t80.67\n",
-      "\n",
-      "85\tTianjin University\t81.00\n",
-      "\n",
-      "86\tNorthwestern Polytechnical University\t81.33\n",
-      "\n",
-      "87\tThe Hong Kong Polytechnic University\t82.00\n",
-      "\n",
-      "88\tBeijing University of Posts and Telecommunications\t82.33\n",
-      "\n",
-      "89\tWuhan University\t82.67\n",
-      "\n",
-      "90\tDalian University of Technology\t83.33\n",
-      "\n",
-      "91\tUniversity of Manchester\t84.00\n",
-      "\n",
-      "92\tThe University of Adelaide\t84.00\n",
-      "\n",
-      "93\tBeijing Institute of Technology\t84.33\n",
-      "\n",
-      "94\tCentral South University\t84.33\n",
-      "\n",
-      "95\tNanjing University of Science and Technology\t84.33\n",
-      "\n",
-      "96\tNational University of Defense Technology\t84.33\n",
-      "\n",
-      "97\tNortheastern University (Shenyang)\t84.33\n",
-      "\n",
-      "98\tShenzhen University\t84.33\n",
-      "\n",
-      "99\tSouth China University of Technology\t84.33\n",
-      "\n",
-      "100\tUniversity of Alberta\t84.33\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m==\u001b[39m limit:\n\u001b[1;32m      9\u001b[0m                 \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[43msave_ranking\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcombined_ranking\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
      ]
     }
    ],
@@ -828,7 +637,7 @@
     "            if i == limit:\n",
     "                break\n",
     "\n",
-    "save_ranking(combined_ranking, 100)[:10]"
+    "save_ranking(combined_ranking, 10)"
    ]
   },
   {
@@ -841,10 +650,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e22b7ee7-f970-4def-93a2-0da55f8c4443",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unis without id: ['University of Southern California']\n",
+      "\n",
+      "$top_unis_cs_2023 =[39, 1, 40, 3, 1092, 288, 38, 72, 170, 6, 168, 8, 225, 33, 692, 159, 978, 1043, 15, 238, 12, 14, 483, 16, 384, 74, 17, 2027, 1458, 2444, 31, 4, 49, 2, 399, 977, 9, 5, 22, 11, 918, 794, 813, 24, 86, 99, 2244, 233, 327, 888, 930, 268, 48, 119, 69, 632, 405, 117, 98, 350]\n"
+     ]
+    }
+   ],
    "source": [
     "def get_ids(unis: list[str], uni2id: dict[str, str], limit: int = None) -> list[int]:\n",
     "    \"\"\"Return IDs corresponding to universities.\"\"\"\n",
